2019-7-7	v0.13.5	TNPLR	<hsiaosvideo@gmail.com>
	* Add A ChangLog

2019-7-7	v0.14-alpha.1	TNPLR	<hsiaosvideo@gmail.com>
	* Put things in different folders
	* boot/asm_utility.S: Share code for I/O

2019-7-7	v0.14-alpha.2	TNPLR	<hsiaosvideo@gmail.com>
	* multiboot_header.S: Enter compatibility mode

2019-7-8	v0.14-alpha.3	TNPLR	<hsiaosvideo@gmail.com>
	* loader.S: Fix GDTR's limit value
	* multiboot_header.S: Load long mode GDTs

2019-7-8	v0.14	TNPLR <hsiaosvideo@gmail.com>
	* boot/multiboot_header.S:
		* 64 bit mode ATA and File reading
		* Read kernel64.elf
	* init/main.c: Infinity Loop
	* kernel/kernel64.ld: kernel64.elf link file

2019-7-8	v0.15-alpha.1 <hsiaosvideo@gmail.com>
	* init/main.c: Init text system; Print a message
	* drivers/text.c: New Print Character Function ...
	* include/pio.h: CPU Port I/O
	* include/kstring.h: memcpy using rep movsb

2019-7-9	v0.15-alpha.2	<hsiaosvideo@gmail.com>
	* boot/multiboot_header.S:
		* Use less memory at Paging
		* Paging the kernel and low 2mib at 0xFFFFFFFF80000000
		* Passing Kernel size using RDI to kmain function
	* drivers/text.c
		* Print String functions
		* Format printing function
	* Makefile: CFLAGS -mcmodel=kernel added
	* kernel/bitmap.c
		* Making bitmap functions right now (undone)
	* include/kstring.h: new memset function
	* kernel/memory.h: Loop back Page Tables