@@ -10,10 +10,12 @@ static inline void setBit(void *pos, unsigned long long int num)
 {
   *((unsigned char *)pos + (num >> 3)) |= 1 << (num & 0x7);
 }
+
 static inline void clearBit(void *pos, unsigned long long int num)
 {
   *((unsigned char *)pos + (num >> 3)) &= ~(1 << (num & 0x7));
 }
+
 void setBitmap(void *pos, unsigned long long int num, unsigned long long int count)
 {
   for (int i = 0; i < count; ++i) {
